update name to notify app

--- a/README.Rmd
+++ b/README.Rmd
@@ -24,7 +24,7 @@ The goal of the ghqc ecosystem is to simplify, standardize, and improve traceabi
 
 1. `ghqc_assign_app`: This app helps the author assign a set of files, each with a corresponding checklist and QCer, to a GitHub Milestone to kick-off the QC review.
 
-2. `ghqc_resolve_app`: Throughout the QC review, this app helps the author communicate resolution of QC findings through comparison of file differences, hashes, and commits.
+2. `ghqc_notify_app`: Throughout the QC review, this app helps the author communicate resolution of QC findings through comparison of file differences, hashes, and commits.
 
 3. `ghqc_record_app`: This app generates a record that compiles QC review that occurred on GitHub.
 
@@ -72,9 +72,9 @@ At any time, the user can:
 
 - Click the `Preview checklist` button below a selected file to view the items in a its selected checklist.
 
-## Resolve QC finding(s)
+## Post QC notification(s)
 
-`ghqc_resolve_app` allows a user to insert a comment into a ghqc GitHub Issue that displays changes
+`ghqc_notify_app` allows a user to insert a comment into a ghqc GitHub Issue that displays changes
 in the version control information for the Issue’s corresponding file. 
 
 By default, the comment displays both the original and current commits and hashes for the file. These versions are selected by the user. 
